pv-pvc/pvchostpath/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostpath-deployment
  namespace: pvc-hostpath
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: spring-hostpath-app
  template:
    metadata:
      labels:
        app: spring-hostpath-app
    spec:
      containers:
        - name: spring-app-hostpath
          image: 69966/springgradleimg:1.1.1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: spring-pvc-hostpath
              mountPath: /app/src/main/resources/images
      volumes:
        - name: spring-pvc-hostpath
          persistentVolumeClaim:
            claimName: spring-hostpath-pvc
