pv-pvc/pvchostpath/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: pvc-hostpath
spec:
  type: ClusterIP
  selector:
    app: spring-hostpath-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
